[Media Controls] Fix control won't hide after mouse interaction while focused

Fix two problems:
1. While focused, mouse move in and move out, control won't hide.
2. While focused, mouse move in and stay, control won't hide after 3 seconds.

Bug: 909087
Change-Id: I4a2c009758e36fd7f3cec5dd9f8042773cc6d454
Reviewed-on: https://chromium-review.googlesource.com/c/1354573
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Commit-Queue: Jazz Xu <jazzhsu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612459}
Former-commit-id: 406c33ba7ee7f6e06619201a4d0a1dc8b3fd1367